--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Telegram",
   "description": "Telegram Web App.\nMore info & source code here: https://github.com/zhukov/webogram",
-  "version": "0.3.9",
-  "short_name": "Telegram",
+  "version": "0.3.6",
+  "short_name": "Webogram",
   "manifest_version": 2,
   "app": {
     "background": {
